--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,46 +8,55 @@
     android:gravity="center_horizontal"
     tools:context="com.example.jayjay.doit.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#00ca63"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:layout_width="10dp"
-            android:layout_height="wrap_content"/>
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"></Spinner>
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="60dp"-->
+        <!--android:background="#009889"-->
+        <!--android:orientation="horizontal"-->
+        <!--&gt;-->
+        <!--<TextView-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="wrap_content"/>-->
+        <!--<Spinner-->
+            <!--android:id="@+id/spinner"-->
+            <!--android:layout_width="100dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_vertical"></Spinner>-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Do It!"
-            android:textSize="40dp"
-            android:fontFamily="casual"
-            android:textColor="#000000"
-            android:layout_gravity="center"/>
-    </LinearLayout>
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Do It!"-->
+            <!--android:textSize="40dp"-->
+            <!--android:fontFamily="casual"-->
+            <!--android:textColor="#000000"-->
+            <!--android:layout_gravity="center"/>-->
+    <!--</LinearLayout>-->
 
+    <include layout="@layout/tool_bar_main"
+        android:id="@+id/toolbar_main">
+
+    </include>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:orientation="vertical"
         android:gravity="center">
-    <android.support.v7.widget.RecyclerView
-        android:layout_height="match_parent"
-        android:layout_width = "match_parent"
-        android:id="@+id/lv_tasks"/>
+        <android.support.v7.widget.RecyclerView
+            android:layout_height="match_parent"
+            android:layout_width = "match_parent"
+            android:id="@+id/lv_tasks"/>
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/btn_add"
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/plus"/>
+        android:id="@+id/btn_add"
+        android:src="@drawable/ic_add_white_24dp"/>
+    <!--<ImageButton-->
+        <!--android:id="@+id/btn_add"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/plus"/>-->
 
 </LinearLayout>
