--- a/app/src/main/res/layout/activity_view_task.xml
+++ b/app/src/main/res/layout/activity_view_task.xml
@@ -5,29 +5,50 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:orientation="horizontal"
+        android:background="@color/colorPrimary"
         android:gravity="end"
         >
 
+        <!--<ImageButton-->
+            <!--android:id="@+id/btn_cancel"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/error"/>-->
+
+        <!--<ImageButton-->
+            <!--android:id="@+id/btn_savechanges"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/success"-->
+            <!--/>-->
         <ImageButton
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/error"/>
+            android:background="@color/colorPrimary"
+            android:padding="5dp"
+            android:src="@drawable/ic_launcher_cancel"
+            />
 
         <ImageButton
             android:id="@+id/btn_savechanges"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/success"
+            android:background="@color/colorPrimary"
+            android:padding="5dp"
+            android:src="@drawable/ic_launcher_check"
             />
 
         <ImageButton
             android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/delete"/>
+            android:background="@color/colorPrimary"
+            android:padding="5dp"
+            android:src="@drawable/ic_launcher_delete"
+            />
 
 
 
@@ -39,7 +60,7 @@
         android:text="What is to be done?"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textColor="#00ca63"/>
     <EditText
         android:id="@+id/et_task"
@@ -48,14 +69,14 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:hint="Enter Task Here"
-        android:textSize="20dp"/>
+        android:textSize="15dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Date and Time"
         android:layout_marginStart="20dp"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textColor="#00ca63"/>
     <EditText
         android:id="@+id/et_date"
@@ -64,7 +85,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:hint="Set Date Here"
-        android:textSize="20dp"/>
+        android:textSize="15dp"/>
     <EditText
         android:id="@+id/et_time"
         android:layout_width="match_parent"
@@ -72,5 +93,29 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:hint="Set Time Here"
-        android:textSize="20dp"/>
+        android:textSize="15dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Place"
+        android:layout_marginStart="20dp"
+        android:textSize="15dp"
+        android:textColor="#00ca63"/>
+    <TextView
+        android:id="@+id/tv_place"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:hint="Set Place here"
+        android:textSize="15dp"/>
+    <Button
+        android:id="@+id/btn_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+
+        android:hint="Set Place using Google Maps"/>
 </LinearLayout>
