--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="65dp"
-    android:id="@+id/container">
-
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="290dp"
@@ -11,12 +12,11 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="23sp"
-            android:id="@+id/tv_content"
-            android:padding="5dp"
-            android:textColor="#222222"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="23sp"
+        android:id="@+id/tv_content"
+        android:textColor="#222222"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,7 +27,6 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:textSize="15sp"
-                android:paddingLeft="5dp"
                 android:id="@+id/tv_date"/>
             <TextView
                 android:layout_width="130dp"
@@ -44,8 +43,4 @@
         android:id="@+id/btn_isDone"/>
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
 </LinearLayout>
